--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies<span
+            <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies requested<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="number" class="form-control" id="noofcopies" name="noofcopies" placeholder=""
