--- a/VlimsApp/ClientApp/src/styles.scss
+++ b/VlimsApp/ClientApp/src/styles.scss
@@ -1,7 +1,15 @@
 @import "theme.scss";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
-
+@import '../node_modules/@syncfusion/ej2-base/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-icons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-lists/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-richtexteditor/styles/material.css';
 html {
   font-size: 87.5%; /* 14px / 16px */
 }
