--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -41,8 +41,9 @@
                  <th pSortableColumn="documenttitle" style="width:25%">Document Name<p-sortIcon field="documenttitle"></p-sortIcon></th>
                  <th pSortableColumn="documentNumber" style="width:20%">Document Number<p-sortIcon field="documentNumber"></p-sortIcon></th>
                  <th pSortableColumn="modifiedDate" style="width:100px">Initiated On <p-sortIcon field="modifiedDate"></p-sortIcon></th>
-                 <th pSortableColumn="workflow" style="width:100px">Initiated by <p-sortIcon field="modifiedby"></p-sortIcon></th>
-                 <th pSortableColumn="noofcopies" style="width:100px">Print Count <p-sortIcon field="noofcopies"></p-sortIcon></th>
+                 <!-- <th pSortableColumn="workflow" style="width:100px">Initiated by <p-sortIcon field="modifiedby"></p-sortIcon></th> -->
+                 <th pSortableColumn="noofcopies" style="width:100px">Requested Copies <p-sortIcon field="noofcopies"></p-sortIcon></th>
+                 <th pSortableColumn="printCount" style="width:100px">Print Count <p-sortIcon field="printCount"></p-sortIcon></th>
                  <th pSortableColumn="Status" style="width:100px">Status <p-sortIcon field="Status"></p-sortIcon></th>
                  <th style="width:80px">Modify</th>
    
@@ -54,10 +55,10 @@
                  <td>{{doc?.printtype}}</td>
                  <td>{{doc?.documenttitle}}</td>
                  <td>{{doc?.documentNumber}}</td>
-                 <td>{{doc?.modifiedDate}}</td>
+                 <!-- <td>{{doc?.modifiedDate}}</td> -->
                  <td>{{doc?.modifiedBy}}</td>
                  <td>{{doc?.noofcopies}}</td>
-   
+                 <td>{{doc?.printCount}}</td>
                  <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td>
                  <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='In-Progress'"><i class="bi bi-pencil"></i></td>
                   <td class="text-center" *ngIf="!access">
