--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -17,13 +17,14 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Document No<span
-              style="color: red; font-weight: bolder;">*</span></label>
+            <label for="prefix" class="col-sm-2 col-form-label">
+              Document No<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <p-dropdown name="docType" [options]="preparations" [(ngModel)]="print.documentNumber"
-                optionLabel="documentno" optionValue="documentno" (onChange)="documentNumberChange($event)" 
-                [autoDisplayFirst]="false" [required]="true" placeholder="Select Document No"
-                #documentnoInput="ngModel" [disabled]="viewMode">
+                          optionLabel="documentno" optionValue="documentno" (onChange)="documentNumberChange($event)"
+                          [autoDisplayFirst]="false" [required]="true" placeholder="Select Document No"
+                          #documentnoInput="ngModel" [disabled]="viewMode">
               </p-dropdown>
               <div *ngIf="documentnoInput.invalid && (documentnoInput.dirty || documentnoInput.touched)" class="text-danger">
                 Document Number is required.
@@ -35,65 +36,80 @@
             <label for="documentTitle" class="col-sm-2 col-form-label">Document Title</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="documentTitle" name="documentTitle"
-                placeholder="Document Title" [(ngModel)]="print.documenttitle" [disabled]="'true'"/>
+                     placeholder="Document Title" [(ngModel)]="print.documenttitle" [disabled]="'true'" />
             </div>
           </div>
-          
+
 
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">Document Type</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="print" name="printType" placeholder="Document Type"
-                [(ngModel)]="print.printtype" [disabled]="'true'"/>
+                     [(ngModel)]="print.printtype" [disabled]="'true'" />
             </div>
           </div>
 
           <div class="form-group row">
-            <label for="noofcopies" class="col-sm-2 col-form-label">No Of Copies requested<span
-              style="color: red; font-weight: bolder;">*</span></label>
+            <label for="noofcopies" class="col-sm-2 col-form-label">
+              No Of Copies requested<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <input type="number" class="form-control" id="noofcopies" name="noofcopies" placeholder=""
-                [(ngModel)]="print.noofcopies" [disabled]="viewMode"  #noofcopiesInput="ngModel"  required placeholder="Choose No Of Copies" min="1"  max="9"/>
-                <div *ngIf="noofcopiesInput.invalid && (noofcopiesInput.dirty || noofcopiesInput.touched)" class="text-danger">
-                  No Of Copies is required.
-                </div>
+                     [(ngModel)]="print.noofcopies" [disabled]="viewMode" #noofcopiesInput="ngModel" required placeholder="Choose No Of Copies" min="1" max="9" />
+              <div *ngIf="noofcopiesInput.invalid && (noofcopiesInput.dirty || noofcopiesInput.touched)" class="text-danger">
+                No Of Copies is required.
+              </div>
             </div>
           </div>
+          <!----Print count-->
           <div class="form-group row">
-            <label for="workflow" class="col-sm-2 col-form-label"
-              >Print Type<span style="color: red; font-weight: bolder;">*</span></label
-            >
+            <label for="noofcopies" class="col-sm-2 col-form-label">
+              Print Count<span style="color: red; font-weight: bolder;">*</span>
+            </label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="printCount" name="printCount" placeholder=""
+                     [(ngModel)]="print.printCount" [disabled]="viewMode" #noofcopiesInput="ngModel" required placeholder="Print Count" min="1" max="9" />
+              <div *ngIf="noofcopiesInput.invalid && (noofcopiesInput.dirty || noofcopiesInput.touched)" class="text-danger">
+                PrintCount is required.
+              </div>
+            </div>
+          </div>
+
+
+          <div class="form-group row">
+            <label for="workflow" class="col-sm-2 col-form-label">Print Type<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <!-- <p-multiSelect
-                [options]="stageSource"
-                [(ngModel)]="selectedStage"
-                placeholder="Select Print Type"
-                name="workflowStage"
-                optionLabel="value"
-                display="chip"
-                [required]="true"
-                #documentstage="ngModel">
-              </p-multiSelect>
-              <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
-                Document Stage is required
-              </div> -->
+        [options]="stageSource"
+        [(ngModel)]="selectedStage"
+        placeholder="Select Print Type"
+        name="workflowStage"
+        optionLabel="value"
+        display="chip"
+        [required]="true"
+        #documentstage="ngModel">
+      </p-multiSelect>
+      <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+        Document Stage is required
+      </div> -->
               <p-dropdown name="PrintType" [options]="stageSource" [(ngModel)]="print.printCopy"
-              optionLabel="label" optionValue="label" placeholder="Select Print Type" [autoDisplayFirst]="false" [required]="true"
-              #documentstage="ngModel" [disabled]="viewMode">
-            </p-dropdown>
-            <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
-              Print Type is required.
-            </div>
+                          optionLabel="label" optionValue="label" placeholder="Select Print Type" [autoDisplayFirst]="false" [required]="true"
+                          #documentstage="ngModel" [disabled]="viewMode">
+              </p-dropdown>
+              <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
+                Print Type is required.
+              </div>
             </div>
           </div>
           <div class="form-group row" *ngIf="print.workflow==''">
-            <label for="prefix" class="col-sm-2 col-form-label">Workflow<span
-              style="color: red; font-weight: bolder;">*</span></label>
+            <label for="prefix" class="col-sm-2 col-form-label">
+              Workflow<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <div class="col-sm-10">
                 <p-dropdown name="workflow" [options]="workflowsSource" [(ngModel)]="print.workflow"
-                  optionLabel="workflowName" optionValue="workflowName" placeholder="Select Workflow" [autoDisplayFirst]="false" [required]="true"
-                  #WorkflowInput="ngModel" [disabled]="viewMode">
+                            optionLabel="workflowName" optionValue="workflowName" placeholder="Select Workflow" [autoDisplayFirst]="false" [required]="true"
+                            #WorkflowInput="ngModel" [disabled]="viewMode">
                 </p-dropdown>
                 <div *ngIf="WorkflowInput.invalid && (WorkflowInput.dirty || WorkflowInput.touched)" class="text-danger">
                   Workflow is required.
@@ -103,28 +119,28 @@
           </div>
 
           <div class="form-group row">
-            <label for="documentType" class="col-sm-2 col-form-label">Reason<span
-              style="color: red; font-weight: bolder;">*</span></label>
+            <label for="documentType" class="col-sm-2 col-form-label">
+              Reason<span style="color: red; font-weight: bolder;">*</span>
+            </label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="reason" name="Reason" placeholder="Give Reason"
-                [(ngModel)]="print.reason" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249"
-                />
-                <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
-                  Give Print Reason.
-  
-                </div>
+                     [(ngModel)]="print.reason" [disabled]="viewMode" #reasonInput="ngModel" required maxlength="249" />
+              <div *ngIf="reasonInput.invalid && (reasonInput.dirty || reasonInput.touched)" class="text-danger">
+                Give Print Reason.
+
+              </div>
             </div>
           </div>
 
           <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
               <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
-              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled"  *ngIf="!viewMode && !editMode">Submit</button>
-              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="editMode" >Update</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid || isButtonDisabled" *ngIf="!viewMode && !editMode">Submit</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid" *ngIf="editMode">Update</button>
               <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
-            <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
-            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
-            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-success" (click)="checkduplicatetemplate(template)">Preview</button>
+              <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
+              <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
+              <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-success" (click)="checkduplicatetemplate(template)">Preview</button>
             </div>
           </div>
 
