--- a/VlimsApp/ClientApp/src/app/modules/documents/components/auditdocumentmasterhome/auditdocumentmasterhome.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/auditdocumentmasterhome/auditdocumentmasterhome.component.html
@@ -21,7 +21,7 @@
           <div class="card-body">
             <!-- <i class="fa fa-chart-pie"></i> -->
             <i class="fa fa-code-compare"></i>
-            <h5 class="card-title">Audit Document Type Configuration</h5>
+            <h5 class="card-title"> Document Type Configuration</h5>
           </div>
         </div>
       </div>
