--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
@@ -70,7 +70,7 @@
               <label for="documentTitle" class="col-sm-2 col-form-label">Document Title</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="documentTitle" name="documentTitle"
-                  placeholder="Document Title" [(ngModel)]="existingDocReq.documenttitle" #documenttitleInput="ngModel"
+                  placeholder="Document Title" [(ngModel)]="existingDocReq.documenttitle" #documenttitleInput="ngModel" maxlength="99"
                   required />
                 <div *ngIf="documenttitleInput.invalid && (documenttitleInput.dirty || documenttitleInput.touched)"
                   class="text-danger">
@@ -83,7 +83,7 @@
               <label for="documentType" class="col-sm-2 col-form-label">Document Number</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="dnumber" name="Dnumber" placeholder="Document Number"
-                  [(ngModel)]="existingDocReq.documentno" #documentno="ngModel" required />
+                  [(ngModel)]="existingDocReq.documentno" #documentno="ngModel" maxlength="99" required />
                 <div *ngIf="documentno.invalid && (documentno.dirty || documentno.touched)" class="text-danger">
                   Document Number is required.
                 </div>
