--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -61,7 +61,7 @@
                 <th pSortableColumn="status" style="width: 100px">
                   Status <p-sortIcon field="status"></p-sortIcon>
                 </th>
-                <th class="text-center" style="width: 80px">Modify</th>
+                <th class="text-center" style="width: 80px">Action</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-docPreperation let-i="rowIndex">
