--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -16,6 +16,30 @@
       <form (ngSubmit)="savePrintRequest()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
 
+
+
+          <div *ngIf="!editMode"  class="form-group row">
+            <label for="reviewsType" class="col-sm-2 col-form-label">Print</label>
+            <div class="col-sm-10">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" name="reviewsType1" type="radio" id="reviewsType2" value="single"
+                  [(ngModel)]="printType" />
+                <label class="form-check-label" for="reviewsType2">New Print</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" name="reviewsType1" type="radio" id="reviewsType1" value="bulk"
+                  [(ngModel)]="printType" />
+                <label class="form-check-label" for="reviewsType1">Existing Print</label>
+              </div>
+            </div>
+          </div>
+
+
+           <!-- Single option controls start here -->
+           <fieldset *ngIf="printType != 'bulk'" [disabled]="printType == 'bulk'">
+
+          
+
           <div class="form-group row">
             <label for="prefix" class="col-sm-2 col-form-label">
               Document No<span style="color: red; font-weight: bolder;">*</span>
@@ -131,6 +155,32 @@
               </div>
             </div>
           </div>
+
+
+        </fieldset>
+        <!-- Single option controls end here -->
+
+
+
+
+          <!-- Bulk option controls start here -->
+          <fieldset *ngIf="printType != 'single'" [disabled]="printType == 'single'">
+           <div class="form-group row">
+             <label for="prefix" class="col-sm-2 col-form-label">Existing Document No<span style="color: red; font-weight: bolder;">*</span></label>
+             <div class="col-sm-10">
+               <p-dropdown name="docType" [options]="preparations1" [(ngModel)]="print.existingdocumentNumber"
+                 (onChange)="documentNumberChange($event)" [autoDisplayFirst]="false" [required]="true"
+                 placeholder="Select Existing Document No" #documentnoInput="ngModel" [disabled]="viewMode">
+               </p-dropdown>
+               <div *ngIf="documentnoInput.invalid && (documentnoInput.dirty || documentnoInput.touched)" class="text-danger">
+                 Existing Document Number is required.
+               </div>
+             </div>
+           </div>
+         </fieldset>
+         
+         <!-- Bulk option controls end here -->
+         
 
           <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
