--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
@@ -89,3 +89,88 @@
 //   height: 200px; /* A4 height */
 //   resize: none; /* Prevent resizing */
 // }
+
+.e-code-mirror::before {
+  content: '\e345';
+}
+
+.CodeMirror-linenumber,
+.CodeMirror-gutters {
+  display: none;
+}
+
+.fabric-dark .cm-s-default .cm-tag,
+.bootstrap5-dark .cm-s-default .cm-tag,
+.material-dark .cm-s-default .cm-tag,
+.tailwind-dark .cm-s-default .cm-tag,
+.highcontrast .cm-s-default .cm-tag {
+  color: #00ff00;
+}
+
+.fabric-dark .cm-s-default .cm-string,
+.bootstrap5-dark .cm-s-default .cm-string,
+.material-dark .cm-s-default .cm-string,
+.tailwind-dark .cm-s-default .cm-string {
+  color: blue;
+}
+
+.highcontrast .cm-s-default .cm-string {
+  color: #ffd939;
+}
+
+.fabric-dark .cm-s-default .cm-attribute,
+.bootstrap5-dark .cm-s-default .cm-attribute,
+.material-dark .cm-s-default .cm-attribute,
+.tailwind-dark .cm-s-default .cm-attribute,
+.highcontrast .cm-s-default .cm-attribute {
+  color: #f00;
+}
+
+.fabric-dark .CodeMirror,
+.bootstrap5-dark .CodeMirror,
+.material-dark .CodeMirror,
+.tailwind-dark .CodeMirror {
+  background: #303030;
+}
+
+.highcontrast .CodeMirror {
+  background: black;
+}
+
+.sb-content.e-view.hide-header {
+  top: 0 !important;
+}
+
+.sb-header.e-view.hide-header {
+  display: none;
+}
+
+.e-richtexteditor .e-rte-content .e-content[contenteditable="true"] pre {
+  padding: 15px;
+  background: #F4F5F7;
+}
+
+.fabric-dark .e-richtexteditor .e-rte-content .e-content pre,
+.bootstrap5-dark .e-richtexteditor .e-rte-content .e-content pre,
+.material-dark .e-richtexteditor .e-rte-content .e-content pre,
+.tailwind-dark .e-richtexteditor .e-rte-content .e-content pre,
+.highcontrast .e-richtexteditor .e-rte-content .e-content pre {
+  padding: 10px;
+  background: #303030;
+}
+
+.e-richtexteditor .e-rte-content .e-content .CodeMirror-line {
+  background: transparent;
+}
+
+#alltoolRTEmirror-view {
+  padding: 0px;
+}
+.e-richtexteditor .e-rte-content .e-content, .e-richtexteditor .e-source-content .e-content{
+    padding-left : 8rem !important;
+    color: #303030 !important;
+}
+.e-richtexteditor .e-rte-content .e-content p, .e-richtexteditor .e-source-content .e-content p {
+  color: #343a40 !important;
+}
+
