--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -138,7 +138,7 @@
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Preview</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+    <button type="button" class="close pull-right" style="padding-left:660px;" aria-label="Close" (click)="closeModel()">
       <span aria-hidden="true">×</span>
     </button>
   </div>
