--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -30,7 +30,7 @@
           </div> -->
 
           <div class="form-group row">
-            <label for="documentTitle" class="col-sm-2 col-form-label">Document Title<span
+            <label for="documentTitle" class="col-sm-2 col-form-label">{{lableMappings?.documentTitle || 'Document Title'}}<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="documentTitle" name="documentTitle"
@@ -42,8 +42,7 @@
           </div>
 
           <div class="form-group row">
-            <label for="docNoType" class="col-sm-2 col-form-label">
-              Document Number</label>
+            <label for="docNoType" class="col-sm-2 col-form-label">Document Number</label>
             <div class="col-sm-10">
               <div class="form-check form-check-inline">
                 <input class="form-check-input" name="docNoType" type="radio" id="docNoType2" [(ngModel)]="docNoType"
@@ -59,7 +58,7 @@
           </div>
 
           <div class="form-group row" *ngIf="docNoType === 'User Defined'">
-            <label for="documentNumber" class="col-sm-2 col-form-label">Document No<span
+            <label for="documentNumber" class="col-sm-2 col-form-label">{{lableMappings?.documentNumber || 'Document Number'}}<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="documentNumber" name="documentNumber"
@@ -119,6 +118,46 @@
               <div *ngIf="templateInput.invalid && (templateInput.dirty || templateInput.touched)" class="text-danger">
                 Template is required
               </div>
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.revisionNo" class="form-group row">
+            <label for="revisionNo" class="col-sm-2 col-form-label">{{lableMappings?.revisionNo || 'Revison Number'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="revisionNo" name="revisionNo"
+                [(ngModel)]="preparation.prepdocument.revisionNo"/>
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.supersedes" class="form-group row">
+            <label for="supersedes" class="col-sm-2 col-form-label">{{lableMappings?.supersedes || 'Supersedes No.'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="supersedes" name="supersedes"
+                [(ngModel)]="preparation.prepdocument.supersedes"/>
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.sampleQuantity" class="form-group row">
+            <label for="sampleQuantity" class="col-sm-2 col-form-label">{{lableMappings?.sampleQuantity || 'Sample Quantity'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="sampleQuantity" name="sampleQuantity"
+                [(ngModel)]="preparation.prepdocument.sampleQuantity"/>
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.packingInformation" class="form-group row">
+            <label for="packingInformation" class="col-sm-2 col-form-label">{{lableMappings?.packingInformation || 'Packing Information'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="packingInformation" name="packingInformation"
+                [(ngModel)]="preparation.prepdocument.packingInformation"/>
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.labelClaim" class="form-group row">
+            <label for="labelClaim" class="col-sm-2 col-form-label">{{lableMappings?.labelClaim || 'Label Claim'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="labelClaim" name="labelClaim"
+                [(ngModel)]="preparation.prepdocument.labelClaim" />
             </div>
           </div>
 
