--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
@@ -166,11 +166,12 @@
 #alltoolRTEmirror-view {
   padding: 0px;
 }
-.e-richtexteditor .e-rte-content .e-content *, .e-richtexteditor .e-source-content .e-content *{
-  padding-left: 8rem !important;
+.e-richtexteditor .e-rte-content .e-content *, .e-richtexteditor .e-source-content .e-content * {
+  /* padding-left: 2rem !important;
   color: #303030 !important;
-  padding-right: 8rem !important;
-}
+  padding-right: 2rem !important;*/
+/*  padding: 15px 100px 15px 100px !important;
+*/}
 .e-richtexteditor .e-rte-content .e-content p, .e-richtexteditor .e-source-content .e-content p {
   color: #343a40 !important;
 }
@@ -179,4 +180,7 @@
   margin: 0 0 10px;
   margin-bottom: 10px;
   color: black !important;
+}
+.e-richtexteditor .e-rte-content .e-content, .e-richtexteditor .e-source-content .e-content {
+  padding: 15px 100px 15px 100px !important;
 }
