--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditrolegridpage/auditrolegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditrolegridpage/auditrolegridpage.component.html
@@ -38,7 +38,7 @@
                         <tr>
                             <th style="width:20%">S.No</th>
                            
-                             <th pSortableColumn="EntityName" style="width:20%">Role Comments<p-sortIcon field="EEntityName"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%">Role Id<p-sortIcon field="EEntityName"></p-sortIcon></th>
                              <th pSortableColumn="EntityName" style="width:20%">Role Name<p-sortIcon field="EEntityName"></p-sortIcon></th>
                              <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
  
