--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -71,7 +71,7 @@
         </div>
         <div class="form-group row my-4">
             <div class="col-sm-10 offset-sm-2">
-                <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">
+                <button *ngIf="!issidebardisabled" type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()" >
                     Cancel
                   </button>
       <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid">Change Password</button>
