--- a/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/documents-landing/documents-landing.component.html
@@ -105,7 +105,7 @@
 
           <li *ngFor="let existdoc of reminderDocs; let i=index" class="reminder__content">
             <div class="reminder__content-info">
-              <p class="reminder__content-title">The review date for Document Number {{existdoc.documentno}} is  within the next {{existdoc?.reviewCountDownValue}} days</p>
+              <p class="reminder__content-title">The review date for Document Number {{existdoc.documentNo}} is  within the next {{existdoc?.reviewCountDownValue}} days</p>
             </div>
           </li>
 
