--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -41,7 +41,7 @@
             </div>            
           </div>
 
-          <div class="form-group row">
+          <!-- <div class="form-group row">
             <label for="docNoType" class="col-sm-2 col-form-label">Document Number</label>
             <div class="col-sm-10">
               <div class="form-check form-check-inline">
@@ -55,7 +55,7 @@
                 <label class="form-check-label" for="docNoType1">User Defined</label>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="form-group row" *ngIf="docNoType === 'User Defined'">
             <label for="documentNumber" class="col-sm-2 col-form-label">{{lableMappings?.documentNumber || 'Document Number'}}<span
@@ -199,7 +199,7 @@
               Cancel
             </button>
             <!--[disabled]="!fm.form.valid || !preparation.document"-->
-            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Submit</button>
+            <button type="submit" class="btn btn-primary" *ngIf="!viewMode" [disabled]="!fm.form.valid || isButtonDisabled">Update</button>
 
             <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="return()">Return</button>
