esifn and few issues

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -55,7 +55,7 @@
                 <th pSortableColumn="status" style="width: 200px">
                   Status <p-sortIcon field="status"></p-sortIcon>
                 </th>
-                <th class="text-center" style="width: 80px">Modify</th>
+                <th class="text-center" style="width: 80px">Action</th>
               </tr>
             </ng-template>
             <ng-template pTemplate="body" let-effective let-i="rowIndex">
