--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.scss
@@ -8,3 +8,31 @@
     width: 150px;
   }
   
+
+
+
+
+
+@media (min-width: 576px) {
+  .custom-modal {
+    max-width: 600px; /* Set maximum width of the modal for medium screens */
+  }
+}
+
+@media (min-width: 768px) {
+  .custom-modal {
+    max-width: 700px; /* Set maximum width of the modal for large screens */
+  }
+}
+
+@media (min-width: 992px) {
+  .custom-modal {
+    max-width: 800px; /* Set maximum width of the modal for extra-large screens */
+  }
+}
+
+@media (min-width: 1200px) {
+  .custom-modal {
+    max-width: 900px; /* Set maximum width of the modal for larger screens */
+  }
+}
