--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Roles/roles.component.html
@@ -42,7 +42,7 @@
                   <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>              
                   
                   <th pSortableColumn="Status" style="width:200px">Status<p-sortIcon field="Status"></p-sortIcon></th>
-                  <th style="width:80px">Modify</th>
+                  <!-- <th style="width:80px">Modify</th> -->
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-doc let-i="rowIndex">
@@ -55,13 +55,13 @@
                   <td>{{doc?.CreatedDate}}</td>              
                   
                   <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>           
-                  <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+                  <!-- <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
                   <td class="text-center" *ngIf="!access">
                     <i class="bi bi-lock bi-lg" 
                     [ngClass]="{'text-primary':true}"
                     title="No Permissions">
                 </i>
-            </td>
+            </td> -->
                 </tr>
               </ng-template>
             </p-table>
