--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.scss
@@ -1,8 +1,36 @@
 
 .form-control, .form-select {
-    max-width: 350px;
-  }
-  
-  
-  
-  
+  max-width: 350px;
+}
+
+
+
+/* Custom CSS to adjust modal size */
+.custom-modal {
+max-width: 80%; /* Set maximum width of the modal */
+margin: 1.75rem auto; /* Center the modal horizontally */
+}
+
+@media (min-width: 576px) {
+.custom-modal {
+  max-width: 600px; /* Set maximum width of the modal for medium screens */
+}
+}
+
+@media (min-width: 768px) {
+.custom-modal {
+  max-width: 700px; /* Set maximum width of the modal for large screens */
+}
+}
+
+@media (min-width: 992px) {
+.custom-modal {
+  max-width: 800px; /* Set maximum width of the modal for extra-large screens */
+}
+}
+
+@media (min-width: 1200px) {
+.custom-modal {
+  max-width: 900px; /* Set maximum width of the modal for larger screens */
+}
+}
