--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -161,6 +161,22 @@
             </div>
           </div>
 
+          <div *ngIf="lableMappings?.reference" class="form-group row">
+            <label for="reference" class="col-sm-2 col-form-label">{{lableMappings?.reference || 'Reference'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="reference" name="reference"
+                [(ngModel)]="preparation.prepdocument.reference" />
+            </div>
+          </div>
+
+          <div *ngIf="lableMappings?.productCode" class="form-group row">
+            <label for="productCode" class="col-sm-2 col-form-label">{{lableMappings?.productCode || 'Product/MaterialCode'}}</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="productCode" name="productCode"
+                [(ngModel)]="preparation.prepdocument.productCode" />
+            </div>
+          </div>
+
           <!-- <div class="form-group row" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!=''">
             <label for="document" class="col-sm-2 col-form-label">Document<span
               style="color: red; font-weight: bolder;">*</span></label>
