--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -128,7 +128,7 @@
               <label for="revisionNo" class="col-sm-2 col-form-label">{{lableMappings?.revisionNo || 'Revison Number'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="revisionNo" name="revisionNo"
-                       [(ngModel)]="preparation.prepdocument.revisionNo" />
+                       [(ngModel)]="preparation.prepdocument.revisionNo" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -136,7 +136,7 @@
               <label for="supersedes" class="col-sm-2 col-form-label">{{lableMappings?.supersedesNo || 'Supersedes No.'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="supersedes" name="supersedes"
-                       [(ngModel)]="preparation.prepdocument.supersedesNo" />
+                       [(ngModel)]="preparation.prepdocument.supersedesNo" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -144,7 +144,7 @@
               <label for="sampleQuantity" class="col-sm-2 col-form-label">{{lableMappings?.sampleQuantity || 'Sample Quantity'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="sampleQuantity" name="sampleQuantity"
-                       [(ngModel)]="preparation.prepdocument.sampleQuantity" />
+                       [(ngModel)]="preparation.prepdocument.sampleQuantity" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -152,7 +152,7 @@
               <label for="packingInformation" class="col-sm-2 col-form-label">{{lableMappings?.packingInformation || 'Packing Information'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="packingInformation" name="packingInformation"
-                       [(ngModel)]="preparation.prepdocument.packingInformation" />
+                       [(ngModel)]="preparation.prepdocument.packingInformation" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -160,7 +160,7 @@
               <label for="labelClaim" class="col-sm-2 col-form-label">{{lableMappings?.labelClaim || 'Label Claim'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="labelClaim" name="labelClaim"
-                       [(ngModel)]="preparation.prepdocument.labelClaim" />
+                       [(ngModel)]="preparation.prepdocument.labelClaim" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -168,7 +168,7 @@
               <label for="reference" class="col-sm-2 col-form-label">{{lableMappings?.reference || 'Reference'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="reference" name="reference"
-                       [(ngModel)]="preparation.prepdocument.reference" />
+                       [(ngModel)]="preparation.prepdocument.reference" [disabled]="viewMode"/>
               </div>
             </div>
 
@@ -176,7 +176,7 @@
               <label for="productCode" class="col-sm-2 col-form-label">{{lableMappings?.productCode || 'Product/MaterialCode'}}</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="productCode" name="productCode"
-                       [(ngModel)]="preparation.prepdocument.productCode" />
+                       [(ngModel)]="preparation.prepdocument.productCode" [disabled]="viewMode"/>
               </div>
             </div>
 
