changes of editor issue

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
@@ -167,11 +167,11 @@
   padding: 0px;
 }
 .e-richtexteditor .e-rte-content .e-content *, .e-richtexteditor .e-source-content .e-content * {
-  /* padding-left: 2rem !important;
-  color: #303030 !important;
-  padding-right: 2rem !important;*/
-/*  padding: 15px 100px 15px 100px !important;
-*/}
+/*   padding-left: 2rem !important;
+*/  color: #303030 !important;
+/*  padding-right: 2rem !important;
+*/ 
+}
 .e-richtexteditor .e-rte-content .e-content p, .e-richtexteditor .e-source-content .e-content p {
   color: #343a40 !important;
 }
