Changes of editor

--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.scss
@@ -173,14 +173,17 @@
 */ 
 }
 .e-richtexteditor .e-rte-content .e-content p, .e-richtexteditor .e-source-content .e-content p {
-  color: #343a40 !important;
+  color: #303030 !important;
 }
 
 .e-richtexteditor .e-rte-content .e-content p, .e-richtexteditor .e-source-content .e-content p {
   margin: 0 0 10px;
   margin-bottom: 10px;
-  color: black !important;
+  color: #343a40 !important;
 }
 .e-richtexteditor .e-rte-content .e-content, .e-richtexteditor .e-source-content .e-content {
   padding: 15px 100px 15px 100px !important;
+}
+.e-richtexteditor .e-rte-content .e-content p {
+  color: #343a40 !important;
 }
