Changes of issues of Reports and repository

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-documents/existing-documents.component.html
@@ -130,4 +130,16 @@
           background-color: white;
           box-shadow: none;
       }
+  .w-150 {
+    width: 150px;
+  }
+
+  .p-paginator .p-dropdown {
+    height: unset;
+  }
+
+  :host ::ng-deep .p-paginator .p-dropdown {
+    height: unset;
+    min-width: unset;
+  }
   </style>
