--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -30,7 +30,7 @@
                    id="Templatename"
                    name="Templatename"
                    placeholder="Template Name"
-                   [(ngModel)]="templateForm.Templatename" disabled="editMode || viewBox"
+                   [(ngModel)]="templateForm.Templatename" 
                    required
                      #TemplatenameInput="ngModel"
                       />
